--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
-cmake_minimum_required(VERSION 3.16)
-project(lab01_Inheritance)
+cmake_minimum_required(VERSION 3.17)
+project(lab01_Inheritance-Brandon0704)
 
 set(CMAKE_CXX_STANDARD 14)
-
-include_directories(.)
 
 include_directories(src)
 
